# napari-polcam

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
napari_polcam/: __init__.py  napari.yaml
napari_polcam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/napari_polcam/: __init__.py  _functions.py  _widget.py  napari.yaml
src/napari_polcam/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
tests/: test_widget.py
