[metadata]
name = napari-polcam
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

# tell napari where to find the manifest
[options.entry_points]
napari.manifest =
    napari-polcam = napari_polcam:napari.yaml


# make sure manifest is included in the package
[options.package_data]
napari-polcam = napari.yaml