[metadata]
name = napari-polcam
version = 0.0.1
author = Ezra Bruggeman
author_email = ezra.bruggeman@gmail.com
license = BSD-3-Clause
url = https://github.com/ezrabru/napari-polcam
description = Napari plugin to process and render polarisation camera data
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approced :: BSD License

project_urls = 
    Bug Tracker = https://github.com/ezrabru/napari-polcam/issues
    Documentation = https://github.com/ezrabru/napari-polcam#README.md
    Source Code = https://github.com/ezrabru/napari-polcam
    User Support = https://github.com/ezrabru/napari-polcam/issues
    

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    napari-plugin-engine>=0.1.4
    napari-tools-menu
    napari
    numpy
    pyqtgraph
    superqt
    

# tell napari where to find the manifest
[options.entry_points]
napari.manifest =
    napari-polcam = napari_polcam:napari.yaml


# make sure manifest is included in the package
[options.package_data]
napari-polcam = napari.yaml